--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mwbzutils (0.0.4-0~wmf1+trusty) trusty-wikimedia; urgency=medium
+
+  * Initial Trusty version.
+
+ -- Ori Livneh <ori@wikimedia.org>  Wed, 12 Aug 2015 20:08:16 +0000
+
 mwbzutils (0.0.4-0~wmf1+precise) precise-wikimedia; urgency=low
 
   * Initial release
