--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mwbzutils (0.1.3~wmf-1+stretch) stretch-wikimedia; urgency=medium
+
+  * mwbzlib fix up searching for blocks backwards in tiny files
+  * tests cleanup to allow different paths for zcat
+  * split_bz2.py permit use of c utils in alternate directories
+
+ -- Ariel T. Glenn <ariel@wikimedia.org>  Tue, 26 Jan 2021 13:39:02 +0200
+
 mwbzutils (0.1.2~wmf-1+stretch) stretch-wikimedia; urgency=medium
 
   * dumplastbz2block read bz2 header when searching for blocks backwards
