--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mwbzutils (0.1.3~wmf-1+buster) buster-wikimedia; urgency=medium
+
+  * build for buster
+
+ -- Ariel T. Glenn <ariel@wikimedia.org>  Wed, 27 Jan 2021 11:47:24 +0200
+
 mwbzutils (0.1.3~wmf-1+stretch) stretch-wikimedia; urgency=medium
 
   * mwbzlib fix up searching for blocks backwards in tiny files
